# timeseries-forge

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: .gitkeep
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: demo.ipynb
notebooks/demo_checkpoints/: metadata.json
scripts/: evaluate.py  export_model.py  load_test.py  prepare_real_data.py  train.py
src/timeseries_forge/: __init__.py
src/timeseries_forge/data/: datasets.py  synthetic.py
src/timeseries_forge/deployment/: export.py  server.py
src/timeseries_forge/evaluation/: anomaly_metrics.py  forecast_metrics.py  walk_forward.py
src/timeseries_forge/models/: forge_net.py  heads.py  layers.py
src/timeseries_forge/training/: checkpoint.py  scheduler.py  trainer.py
src/timeseries_forge/utils/: seed.py
tests/: conftest.py  test_datasets.py  test_evaluation.py  test_export.py  test_forge_net.py  test_layers.py  test_prepare_real_data.py  test_training_utils.py
