[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries-forge"
version = "0.1.0"
description = "Multi-task probabilistic forecasting and anomaly detection for multivariate time series, built on PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["pytorch", "time-series", "forecasting", "anomaly-detection", "deep-learning", "transformer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.5"]
export = ["onnx>=1.15", "onnxruntime>=1.17"]
viz = ["tensorboard>=2.16", "matplotlib>=3.8"]
real-data = ["ucimlrepo>=0.0.7"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "black>=24.0", "ruff>=0.4", "mypy>=1.9"]
all = ["timeseries-forge[serve,export,viz,real-data,dev]"]

[project.urls]
Repository = "https://github.com/Arman-046/timeseries-forge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
